--- a/www/index.ejs
+++ b/www/index.ejs
@@ -8,7 +8,7 @@
                     <li><%- item.title %></li>
                     <li>
                         <ul class="flexBox spaceBetween">
-                            <li>Edit</li>
+                            <li><a href="/update/page/<%- item.id %>">Update</a></li>
                             <li>
                                 <form action="/page/<%- item.id %>/delete" method="POST">
                                     <button type="submit">Delete</button>
