Ajout de la fonction pourmettre à jour une entreée en bacoffice

--- a/www/update.ejs
+++ b/www/update.ejs
@@ -3,7 +3,8 @@
 <main>
     <h2>Modifier une entrée de la base de données</h2>
 
-    <%- JSON.stringify(data) %>
+    <%- include('components/form-page', { type: "PUT" }) -%>
+
 </main>
 
 <%- include('statics/footer') -%>
